Correction contraste

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -7794,7 +7794,7 @@ button.close {
 .center-block {
     display: block;
     margin-right: auto;
-    margin-left: auto
+    margin-left: auto;
 }
 
 .pull-right {
